Small tweaks to transitions. Remove about from home page. Modified text about research.

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 				<!-- Two : About me -->
 					<!--section class="banner style1 orient-right content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-left" id="first"-->
 					<!--section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first"-->
-					<section class="banner fullscreen style1 orient-right content-align-left image-position-right onscroll-image-fade-in" id="first">
+					<section class="banner fullscreen style1 orient-right content-align-left image-position-right onscroll-image-fade-in onload-image-fade-left" id="first">
 						<div class="content">
 							<h2>About me</h2>
 							<p>I was born in raised in Toronto, Ontario. As a child, I enjoyed swimming (for fun and occasionally in swim meets),
@@ -106,8 +106,12 @@
                             <p> I attended the University of Waterloo from 2019 to early 2022. I received my Masters (MMath) degree in Computer Science in June 2022. 
                                 My Masters'
                              thesis can be found <a href="https://uwspace.uwaterloo.ca/handle/10012/18155">here</a>.</p>    
+
+                             <br><br><br><br><br><br><br>
+
+
 							<ul class="actions stacked">
-								<li><a href="#third" class="button smooth-scroll-middle">Continue to My Research</a></li>
+								<li><a href="#hobbies" class="button smooth-scroll-middle">Continue</a></li>
 							</ul>
 						</div>
 						<div class="image" onmousedown="return false">
@@ -118,7 +122,7 @@
 
 				
 					<!-- Number placement TBD : Hobbies and Clubs -->
-						<section class="wrapper style1 align-center">
+						<section class="wrapper style1 align-center" id="hobbies">
 							<div class="inner medium">
 								<h2>Hobbies</h2>
 
