--- a/work.html
+++ b/work.html
@@ -182,9 +182,9 @@
 							<br>
 						<div>
 							<br>
-							<ul class="actions stacked">
+							<!--ul class="actions stacked">
 								<li><a href="#sixth" class="button smooth-scroll-middle">Continue to Programming Skills</a></li>
-							</ul>
+							</ul-->
 						</div>
 
 					</section>
