Added jump to top button. Works on main page.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
 				</ul>
 			</nav>
 
+        
+        <!-- Nav -->
+			<nav id="bottomNavbar">
+				<ul class="container">
+					<li><a href="#section1">&uarr;</a></li>
+			</nav>
+            
+
+
+
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided" onmousedown="return false">
 
@@ -441,6 +451,7 @@
 							</div>
 						</div>
 					</section>
+
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
