Added go to top button to other pages.

--- a/about.html
+++ b/about.html
@@ -41,6 +41,11 @@
 				</ul>
 			</nav>
 
+			<nav id="bottomNavbar">
+				<ul class="container">
+					<li><a href="#first">&uarr;</a></li>
+			</nav>
+
 		<!-- Wrapper -->
 		
             <!-- Wrapper -->
