--- a/work.html
+++ b/work.html
@@ -43,6 +43,12 @@
 				</ul>
 			</nav>
 
+			<nav id="bottomNavbar">
+				<ul class="container">
+					<li><a href="#fourth">&uarr;</a></li>
+			</nav>
+
+
 			<!-- Wrapper -->
 			<div id="wrapper" class="divided" onmousedown="return false">
 
