Added resume to home page.

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 				<ul class="container">
 					<li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-					<li><a href="work.html">Projects</a></li>
+					<li><a href="projects.html">Projects</a></li>
 					<li><a href="resume.pdf">Resume</a></li>
 					<li><a href="#email" class="smooth-scroll-middle">Contact</a></li>
 					<!--div class="dropdown">
@@ -89,7 +89,7 @@
 								At Danforth Collegiate,
 								I was in the MaST program.
 								I was the top student in Calculus and Chemistry. I volunteered in the after school "Math Clinic" program, helping
-								other students study for their math courses (believe me, I was very cool in high school).
+								other students study for their math courses. <!--(believe me, I was very cool in high school).-->
 
 								Along with three other Danforth students, I participated in a high school outreach program run by the
 								University of Toronto Aerospace Team (UTAT). We designed and built a 1U CubeSat as a deployable payload for a hybrid sounding rocket.
