Added images, other small changes.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Nav -->
 			<nav id="bottomNavbar">
 				<ul class="container">
-					<li><a href="#resume">&uarr;</a></li>
+					<li><a href="#pagetop">&uarr;</a></li>
 			</nav>
             
 
