Added fixed dist reps link. Small index changes.

--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
 	
 							<h3> Distant Representatives calculator </h3>
 							
-							<a href="https://distant-representatives.herokuapp.com/"><img src="images/research/dr3.png" alt="Click here to launch demo." style="width: auto;"></a>
+							<a href="https://distant-representatives.onrender.com/"><img src="images/research/dr3.png" alt="Click here to launch demo." style="width: auto;"></a>
 							</img>
 			
 							<br>
@@ -78,7 +78,7 @@
 								In my spare time, I've implemented a visualization tool for the problem using 
 								the <a href="http://fabricjs.com/">FabricJs</a> drawing library 
 								and a <a href="https://flask.palletsprojects.com/en/2.1.x/">Flask</a> backend server.
-								<a href="https://distant-representatives.herokuapp.com/"> Try the tool yourself! (Heroku has eliminated free hosting, I will get the project up and running again soon) </a> 
+								<a href="https://distant-representatives.onrender.com/"> Try the tool yourself! </a> 
 
 								
 							</p>
